--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,17 +1,22 @@
 name: Build APK
 on: [push]
+
 jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+
       - name: Buildozer Action
-        uses: ArtemSerebrennkov/buildozer-action@v1
+        # Usamos la acción oficial y actualizada para evitar errores de repositorio
+        uses: Enenkel/buildozer-action@v0.0.1
         with:
           build_command: buildozer android debug
           python_version: 3.9
+
       - name: Upload APK
-        uses: actions/upload-artifact@v2
+        # Actualizado a v4 como pide GitHub para evitar la depreciación
+        uses: actions/upload-artifact@v4
         with:
           name: NeuralLink-APK
           path: bin/*.apk
