--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -7,12 +7,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Buildozer Action
-        # Esta es la acción oficial mantenida por la organización Kivy
-        uses: kivy/buildozer-action@master
-        with:
-          build_command: buildozer android debug
-          python_version: 3.9
+      - name: Install dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y git zip unzip autoconf automake libtool pkg-config zlib1g-dev libncurses5-dev libncursesw5-dev libtinfo5 cmake libffi-dev libssl-dev
+          pip3 install --user --upgrade Cython==0.29.33 buildozer
+
+      - name: Build with Buildozer
+        run: |
+          # Agregamos el path de buildozer y compilamos
+          export PATH=$PATH:~/.local/bin
+          buildozer android debug
 
       - name: Upload APK
         uses: actions/upload-artifact@v4
