build: Force clean build and bump version to 1.0.1

--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -24,6 +24,7 @@ jobs:
           export PATH=$PATH:~/.local/bin
           # LA CLAVE: Aceptamos licencias mediante variable de entorno y flag de buildozer
           export APP_ANDROID_ACCEPT_SDK_LICENSE=True
+          buildozer appclean
           buildozer android debug || buildozer android debug
         env:
           # Refuerzo de aceptación para el SDK Manager
